--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,11 +1,13 @@
-<%= form_with url: passwords_path, local: true do |form| %>
-  <div class="field">
-    <%= form.label :password, "Password" %>
-    <%= form.password_field :password, id: 'password', class: 'form-control', required: true %>
-    <div id="password-feedback" class="feedback"></div>
-  </div>
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+  <%= form_with url: passwords_path, local: true do |form| %>
+    <div class="field">
+      <%= form.label :password, "Password" %>
+      <%= form.password_field :password, id: 'password', class: 'form-control', required: true %>
+      <div id="password-feedback" class="feedback"></div>
+    </div>
 
-  <%= form.submit "Create Password", class: 'btn btn-primary' %>
-<% end %>
+    <%= form.submit "Create Password", class: 'btn btn-primary' %>
+  <% end %>
+</div>
 
 <%= javascript_pack_tag 'password_validation' %>
